--- a/fp-image-processor-ios/Views/OperationTableViewCell.xib
+++ b/fp-image-processor-ios/Views/OperationTableViewCell.xib
@@ -12,15 +12,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LayerTableViewCell" rowHeight="104" id="KGk-i7-Jjw" customClass="LayerTableViewCell" customModule="fp_image_processor_ios" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="335" height="104"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="OperationTableViewCell" id="KGk-i7-Jjw" customClass="OperationTableViewCell" customModule="fp_image_processor_ios" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="335" height="103.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="26.5" y="84"/>
         </tableViewCell>
     </objects>
 </document>
