--- a/fp-image-processor-ios/Views/LayerTableViewCell.xib
+++ b/fp-image-processor-ios/Views/LayerTableViewCell.xib
@@ -6,21 +6,81 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LayerTableViewCell" rowHeight="104" id="KGk-i7-Jjw" customClass="LayerTableViewCell" customModule="fp_image_processor_ios" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="335" height="104"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LayerTableViewCell" rowHeight="166" id="KGk-i7-Jjw" customClass="LayerTableViewCell" customModule="fp_image_processor_ios" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="335" height="166"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="335" height="103.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="335" height="165.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PmG-7t-zNF">
+                        <rect key="frame" x="16" y="16" width="303" height="127"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="MMT-90-TVG">
+                                <rect key="frame" x="8" y="8" width="287" height="111"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ID" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XRO-4y-Hch">
+                                        <rect key="frame" x="0.0" y="0.0" width="287" height="25.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="qwe.png" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zgX-9k-UoM">
+                                        <rect key="frame" x="0.0" y="33.5" width="287" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gDW-1j-9K8">
+                                        <rect key="frame" x="0.0" y="62" width="287" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="active" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fbR-P8-aDR">
+                                        <rect key="frame" x="0.0" y="90.5" width="287" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.77060426311728392" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.93452208719135799" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="MMT-90-TVG" secondAttribute="trailing" id="QnH-gM-Cy6"/>
+                            <constraint firstItem="MMT-90-TVG" firstAttribute="top" secondItem="PmG-7t-zNF" secondAttribute="topMargin" id="Rcb-bA-ZcF"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="MMT-90-TVG" secondAttribute="bottom" id="hYk-1l-NMh"/>
+                            <constraint firstItem="MMT-90-TVG" firstAttribute="leading" secondItem="PmG-7t-zNF" secondAttribute="leadingMargin" id="ipq-Z4-4BL"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="PmG-7t-zNF" secondAttribute="trailing" constant="16" id="Reb-ed-xAd"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="PmG-7t-zNF" secondAttribute="bottom" constant="16" id="YBA-d0-rKF"/>
+                    <constraint firstItem="PmG-7t-zNF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="lqo-kp-r9T"/>
+                    <constraint firstItem="PmG-7t-zNF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="ykU-Sa-8tf"/>
+                </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="26.5" y="84"/>
+            <connections>
+                <outlet property="lblActive" destination="fbR-P8-aDR" id="NGC-po-F9C"/>
+                <outlet property="lblAlpha" destination="gDW-1j-9K8" id="Jsu-eu-yOK"/>
+                <outlet property="lblId" destination="XRO-4y-Hch" id="gfq-ZJ-Obd"/>
+                <outlet property="lblImg" destination="zgX-9k-UoM" id="3tP-Ra-sZU"/>
+                <outlet property="wrapperView" destination="PmG-7t-zNF" id="f3d-AL-Mtz"/>
+            </connections>
+            <point key="canvasLocation" x="-4.5" y="-34"/>
         </tableViewCell>
     </objects>
 </document>
