--- a/fp-image-processor-ios/Views/OperationTableViewCell.xib
+++ b/fp-image-processor-ios/Views/OperationTableViewCell.xib
@@ -6,20 +6,65 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="OperationTableViewCell" id="KGk-i7-Jjw" customClass="OperationTableViewCell" customModule="fp_image_processor_ios" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="OperationTableViewCell" rowHeight="115" id="KGk-i7-Jjw" customClass="OperationTableViewCell" customModule="fp_image_processor_ios" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="164" height="115"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="164" height="114.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ew6-Fw-enf">
+                        <rect key="frame" x="16" y="16" width="132" height="65"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="fR1-mM-mZH">
+                                <rect key="frame" x="0.0" y="8" width="132" height="49"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4li-Tq-avk">
+                                        <rect key="frame" x="0.0" y="0.0" width="132" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Attributes" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Z2-rZ-8Bp">
+                                        <rect key="frame" x="0.0" y="28.5" width="132" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="fR1-mM-mZH" secondAttribute="trailing" id="6uK-3T-YJ7"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="fR1-mM-mZH" secondAttribute="bottom" id="Nak-w3-b3G"/>
+                            <constraint firstItem="fR1-mM-mZH" firstAttribute="leading" secondItem="ew6-Fw-enf" secondAttribute="leading" id="uzl-hi-lQC"/>
+                            <constraint firstItem="fR1-mM-mZH" firstAttribute="topMargin" secondItem="ew6-Fw-enf" secondAttribute="topMargin" id="wio-ZC-Jq1"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                <constraints>
+                    <constraint firstItem="ew6-Fw-enf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="8B1-aT-CLh"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="ew6-Fw-enf" secondAttribute="bottom" constant="16" id="VYW-o0-B0c"/>
+                    <constraint firstAttribute="trailing" secondItem="ew6-Fw-enf" secondAttribute="trailing" constant="16" id="pfV-uq-lUi"/>
+                    <constraint firstItem="ew6-Fw-enf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="qgm-gM-w7H"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="lblAttributes" destination="6Z2-rZ-8Bp" id="JDP-Ml-esY"/>
+                <outlet property="lblName" destination="4li-Tq-avk" id="J3y-QF-lLe"/>
+                <outlet property="wrapperView" destination="ew6-Fw-enf" id="YAr-cD-64n"/>
+            </connections>
+            <point key="canvasLocation" x="148" y="89.5"/>
         </tableViewCell>
     </objects>
 </document>
