--- a/fp-image-processor-ios/Views/SelectionTableViewCell.xib
+++ b/fp-image-processor-ios/Views/SelectionTableViewCell.xib
@@ -6,20 +6,80 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LayerTableViewCell" id="KGk-i7-Jjw" customClass="SelectionTableViewCell" customModule="fp_image_processor_ios" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LayerTableViewCell" rowHeight="160" id="KGk-i7-Jjw" customClass="SelectionTableViewCell" customModule="fp_image_processor_ios" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="247" height="160"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="247" height="159.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zWn-qS-V29">
+                        <rect key="frame" x="16" y="16" width="215" height="122"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ebp-xO-nGX">
+                                <rect key="frame" x="0.0" y="8" width="215" height="106"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GKi-Pd-lXM">
+                                        <rect key="frame" x="0.0" y="0.0" width="215" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Active" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vmY-7l-t7R">
+                                        <rect key="frame" x="0.0" y="28.5" width="215" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="rectangles" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eOe-Ws-W1q">
+                                        <rect key="frame" x="0.0" y="57" width="215" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="operations" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fDs-FH-Lpr">
+                                        <rect key="frame" x="0.0" y="85.5" width="215" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.94509803921568625" green="0.94509803921568625" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="ebp-xO-nGX" firstAttribute="leading" secondItem="zWn-qS-V29" secondAttribute="leading" id="5vx-9T-QmD"/>
+                            <constraint firstItem="ebp-xO-nGX" firstAttribute="top" secondItem="zWn-qS-V29" secondAttribute="topMargin" id="NQI-jL-m8z"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="ebp-xO-nGX" secondAttribute="bottom" id="f1I-26-cXd"/>
+                            <constraint firstAttribute="trailing" secondItem="ebp-xO-nGX" secondAttribute="trailing" id="vbp-iT-pzh"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="zWn-qS-V29" secondAttribute="trailing" constant="16" id="QN0-HP-bUB"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="zWn-qS-V29" secondAttribute="bottom" constant="16" id="eog-nG-ZvT"/>
+                    <constraint firstItem="zWn-qS-V29" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="uW6-8S-HjQ"/>
+                    <constraint firstItem="zWn-qS-V29" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="v6f-KC-ztF"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="lblActive" destination="vmY-7l-t7R" id="JI2-uC-JRL"/>
+                <outlet property="lblName" destination="GKi-Pd-lXM" id="rpy-8t-9fu"/>
+                <outlet property="lblOperations" destination="fDs-FH-Lpr" id="yhf-lv-Q2G"/>
+                <outlet property="lblRectangles" destination="eOe-Ws-W1q" id="89z-vC-JhP"/>
+                <outlet property="wrapperView" destination="zWn-qS-V29" id="9hg-96-RN7"/>
+            </connections>
+            <point key="canvasLocation" x="110.5" y="45"/>
         </tableViewCell>
     </objects>
 </document>
