--- a/fp-image-processor-ios/Views/SelectionTableViewCell.xib
+++ b/fp-image-processor-ios/Views/SelectionTableViewCell.xib
@@ -13,7 +13,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LayerTableViewCell" rowHeight="160" id="KGk-i7-Jjw" customClass="SelectionTableViewCell" customModule="fp_image_processor_ios" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SelectionTableViewCell" rowHeight="160" id="KGk-i7-Jjw" customClass="SelectionTableViewCell" customModule="fp_image_processor_ios" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="247" height="160"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -79,7 +79,7 @@
                 <outlet property="lblRectangles" destination="eOe-Ws-W1q" id="89z-vC-JhP"/>
                 <outlet property="wrapperView" destination="zWn-qS-V29" id="9hg-96-RN7"/>
             </connections>
-            <point key="canvasLocation" x="110.5" y="45"/>
+            <point key="canvasLocation" x="106" y="45"/>
         </tableViewCell>
     </objects>
 </document>
