--- a/fp-image-processor-ios/Views/RectangleTableViewCell.xib
+++ b/fp-image-processor-ios/Views/RectangleTableViewCell.xib
@@ -12,14 +12,69 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RectangleTableViewCell" id="KGk-i7-Jjw" customClass="RectangleTableViewCell" customModule="fp_image_processor_ios" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RectangleTableViewCell" rowHeight="132" id="KGk-i7-Jjw" customClass="RectangleTableViewCell" customModule="fp_image_processor_ios" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="132"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="131.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YCg-cb-9sj">
+                        <rect key="frame" x="16" y="8" width="288" height="115.5"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="pwI-P3-PUh">
+                                <rect key="frame" x="0.0" y="8" width="288" height="99.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="START" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vK0-vR-zin">
+                                        <rect key="frame" x="0.0" y="0.0" width="288" height="19"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Pj-wF-2IS">
+                                        <rect key="frame" x="0.0" y="27" width="288" height="19"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="END" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gbQ-1A-6UL">
+                                        <rect key="frame" x="0.0" y="54" width="288" height="18.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XRM-VD-E5o">
+                                        <rect key="frame" x="0.0" y="80.5" width="288" height="19"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.94509803921568625" green="0.94509803921568625" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="pwI-P3-PUh" secondAttribute="trailing" id="ATr-oS-PWe"/>
+                            <constraint firstItem="pwI-P3-PUh" firstAttribute="top" secondItem="YCg-cb-9sj" secondAttribute="top" constant="8" id="aWG-rb-xcS"/>
+                            <constraint firstAttribute="bottom" secondItem="pwI-P3-PUh" secondAttribute="bottom" constant="8" id="m4x-8e-FWk"/>
+                            <constraint firstItem="pwI-P3-PUh" firstAttribute="leading" secondItem="YCg-cb-9sj" secondAttribute="leading" id="qL9-uL-s2s"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="YCg-cb-9sj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="UL0-8T-yyw"/>
+                    <constraint firstItem="YCg-cb-9sj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="hbv-Rk-ncn"/>
+                    <constraint firstAttribute="trailing" secondItem="YCg-cb-9sj" secondAttribute="trailing" constant="16" id="mz7-ks-Fy6"/>
+                    <constraint firstAttribute="bottom" secondItem="YCg-cb-9sj" secondAttribute="bottom" constant="8" id="udO-bt-FK8"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="lblEnd" destination="XRM-VD-E5o" id="qhL-fF-Gu0"/>
+                <outlet property="lblStart" destination="2Pj-wF-2IS" id="09D-pG-sQA"/>
+                <outlet property="wrapperView" destination="YCg-cb-9sj" id="VP4-O9-tvU"/>
+            </connections>
+            <point key="canvasLocation" x="90" y="98"/>
         </tableViewCell>
     </objects>
 </document>
