--- a/fp-image-processor-ios/Base.lproj/Main.storyboard
+++ b/fp-image-processor-ios/Base.lproj/Main.storyboard
@@ -84,16 +84,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BoS-5b-tyP">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BoS-5b-tyP">
+                                <rect key="frame" x="0.0" y="32" width="375" height="667"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="BoS-5b-tyP" firstAttribute="top" secondItem="C81-8A-X2I" secondAttribute="top" id="L4J-JC-XHy"/>
-                            <constraint firstItem="C81-8A-X2I" firstAttribute="trailing" secondItem="BoS-5b-tyP" secondAttribute="trailing" id="Xhh-bZ-t4T"/>
-                            <constraint firstItem="C81-8A-X2I" firstAttribute="bottom" secondItem="BoS-5b-tyP" secondAttribute="bottom" id="cJe-HJ-Ghc"/>
-                            <constraint firstItem="BoS-5b-tyP" firstAttribute="leading" secondItem="C81-8A-X2I" secondAttribute="leading" id="nt1-5M-aKC"/>
+                            <constraint firstItem="BoS-5b-tyP" firstAttribute="centerY" secondItem="C81-8A-X2I" secondAttribute="centerY" id="87M-xw-6Hl"/>
+                            <constraint firstItem="BoS-5b-tyP" firstAttribute="width" secondItem="9dF-uT-CrT" secondAttribute="width" id="Xgm-tr-Wrt"/>
+                            <constraint firstItem="BoS-5b-tyP" firstAttribute="height" secondItem="9dF-uT-CrT" secondAttribute="height" id="crg-mF-pbS"/>
+                            <constraint firstItem="BoS-5b-tyP" firstAttribute="centerX" secondItem="C81-8A-X2I" secondAttribute="centerX" id="oci-ij-VPg"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="C81-8A-X2I"/>
                     </view>
@@ -501,7 +501,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F95-zi-6Ny">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="521"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="504.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create Operation" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NKW-pM-NGg">
                                                 <rect key="frame" x="32" y="8" width="311" height="37"/>
@@ -593,16 +593,13 @@
                                                 </subviews>
                                             </stackView>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="u5S-DJ-0Or">
-                                                <rect key="frame" x="32" y="393.5" width="311" height="49.5"/>
+                                                <rect key="frame" x="32" y="393.5" width="311" height="33"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <string key="text" base64-UTF8="YES">
-Cg
-</string>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hs9-fm-TPn">
-                                                <rect key="frame" x="32" y="459" width="311" height="30"/>
+                                                <rect key="frame" x="32" y="442.5" width="311" height="30"/>
                                                 <state key="normal" title="SUBMIT"/>
                                                 <connections>
                                                     <action selector="btnSubmitAction:" destination="krM-LP-yO7" eventType="touchUpInside" id="0Pz-76-P8G"/>
@@ -975,6 +972,6 @@ Cg
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="XcS-Jd-SQ3"/>
+        <segue reference="b5a-wI-2hx"/>
     </inferredMetricsTieBreakers>
 </document>
